Updates for LabelOccupancyOcTree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(octomap_rviz_plugins)
 
-find_package(catkin REQUIRED COMPONENTS octomap_msgs
+find_package(catkin REQUIRED COMPONENTS cv_bridge
+                                        octomap_msgs
                                         roscpp
                                         rviz
                                         
